--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>ASBAQ2022 | 24 May – 27 May 2022</title>
+        <title>ICME2024 | 15th International Congress on Mathematics Education | 7 July – 14 July 2024</title>
         <!-- Bootstrap CSS -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,14 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async="async" src="https://www.googletagmanager.com/gtag/js?id=UA-43196972-5"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128963342-28"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-128963342-28');
+        </script>
         <style>
             body,
             html {
