--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             .container {
                 position: absolute;
                 top: 0;
-                left: 50%;
-                transform: translateX(-50%);
+                left: 3rem;
                 z-index: 99;
                 height: 100%;
+
             }
             .container .row {
                 height: 100%;
@@ -53,7 +53,7 @@
             }
             h1 {
                 color: #006891;
-                font: 900 2.85em/1.2 'Montserrat', sans-serif;
+                font: 900 2.5em/1.2 'Montserrat', sans-serif;
                 text-transform: uppercase;
             }
             h1 span {
@@ -84,7 +84,7 @@
               color: white;
               background-color: #00597c;
             }
-            @media (max-width:770px) {
+            @media (max-width: 768px) {
                 h1 {
                     color: #006891;
                     font: 900 1.8em/1 'Montserrat', sans-serif;
@@ -96,6 +96,9 @@
                     color: #003b52;
                     font: 900 1.5em/1.5 'Montserrat',sans-serif;
                 }
+                .container {
+                  left: 0;
+                }
             }
         </style>
     </head>
@@ -103,11 +106,11 @@
       <div class="bg-image"></div>
       <div class="container">
         <div class="row align-items-center align-items-md-end">
-          <div class="col text-center py-4 px-5 glass mb-md-5">
+          <div class="col-12 col-md-5 py-4 px-5 glass mb-5 text-center text-md-left">
             <h1 class="mb-0">15th International Congress on Mathematics Education</h1>
             <h2 class="mt-3 mb-0">ICC Sydney</h2>
             <h3>7 - 14 July 2024</h3>
-            <a href="" class="button px-5 py-4 mt-4 d-inline-block">Register your Expresion of Interest</a>
+            <a href="" class="button px-5 py-4 mt-4 d-inline-block text-center">Register your Expresion of Interest</a>
           </div>
         </div>
       </div>
