--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 }
                 .container {
                   left: 0;
+                  max-width: 100%;
                 }
             }
         </style>
@@ -106,7 +107,7 @@
       <div class="bg-image"></div>
       <div class="container">
         <div class="row align-items-center align-items-md-end">
-          <div class="col-12 col-md-5 py-4 px-5 glass mb-5 text-center text-md-left">
+          <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-5 py-4 px-5 glass mb-5 text-center text-md-left">
             <h1 class="mb-0">15th International Congress on Mathematics Education</h1>
             <h2 class="mt-3 mb-0">ICC Sydney</h2>
             <h3>7 - 14 July 2024</h3>
