--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             }
             .bg-image {
               height: 100%;
-              background: url("./img/bg.jpg") center bottom no-repeat;
+              background: url("./img/bg2.jpg") center center no-repeat;
               background-size: cover;
             }
             .container {
                 position: absolute;
                 top: 0;
-                left: 3rem;
+                left: 50%;
+                transform: translateX(-50%);
                 z-index: 99;
                 height: 100%;
 
@@ -53,7 +54,7 @@
             }
             h1 {
                 color: #006891;
-                font: 900 2.5em/1.2 'Montserrat', sans-serif;
+                font: 900 1.8em/1.2 'Montserrat', sans-serif;
                 text-transform: uppercase;
             }
             h1 span {
@@ -62,12 +63,12 @@
             }
             h2 {
                 color: #003b52;
-                font: 900 2.2em/1.5 'Montserrat',sans-serif;
+                font: 900 1.5em/1.5 'Montserrat',sans-serif;
                 text-transform: uppercase;
             }
             h3 {
                 color: #003b52;
-                font: 900 1.7em/1.4 'Montserrat', sans-serif;
+                font: 900 1.45em/1.4 'Montserrat', sans-serif;
                 text-transform: uppercase;
             }
             p {
@@ -96,8 +97,12 @@
                     color: #003b52;
                     font: 900 1.5em/1.5 'Montserrat',sans-serif;
                 }
+                .bg-image {
+                  height: 100%;
+                  background: url("./img/bg3.jpg") center bottom no-repeat;
+                  background-size: cover;
+                }
                 .container {
-                  left: 0;
                   max-width: 100%;
                 }
             }
@@ -106,12 +111,12 @@
     <body>
       <div class="bg-image"></div>
       <div class="container">
-        <div class="row align-items-center align-items-md-end">
-          <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-5 py-4 px-5 glass mb-5 text-center text-md-left">
+        <div class="row align-items-end justify-content-center">
+          <div class="col-12 p-3 glass mb-4 text-center text-center">
             <h1 class="mb-0">15th International Congress on Mathematics Education</h1>
             <h2 class="mt-3 mb-0">ICC Sydney</h2>
             <h3>7 - 14 July 2024</h3>
-            <a href="" class="button px-5 py-4 mt-4 d-inline-block text-center">Register your Expresion of Interest</a>
+            <a href="" class="button px-5 py-4 mt-3 d-inline-block text-center">Register your Expresion of Interest</a>
           </div>
         </div>
       </div>
