Updated array and title

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 text-center p-5">
-              <h1 class="mb-5">See you Sydney!</h1>
+              <h1 class="mb-5">See you in Sydney!</h1>
               <h2 class="mb-4">15th International Congress on Mathematics Education</h2>
               <h3 class="mb-4">7 - 14 July 2024 • ICC Sydney</h3>
               <h4>Sydney, where it all adds up</h4>
@@ -150,12 +150,13 @@
       </div>
       <script defer>
         let images = [];
-        let animal = [2, 7, 11, 15, 32];
+        let animal = [2, 7, 11, 15, 20, 32];
         let animalDesc = [
           "Big red kangaroos can hop 8m in a single bound",
           "Koalas can sleep up to 18 hours a day",
           "The heaviest wombat recorded was 38kg",
           "There are 3 times more Kookaburra’s than people in Australia",
+          "Rainbow Lorikeets will travel up to 100 km per day",
           "Emus can grow up to 2m tall"
         ]
         for (let i = 0; i < 36; i ++) {
