acknowledgement of country added

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
               <h2 class="mb-4">15th International Congress on Mathematics Education</h2>
               <h3 class="mb-4">7 - 14 July 2024 • ICC Sydney</h3>
               <h4>Sydney, where it all adds up</h4>
+              <h3 class="mt-5">Ackknowledgement of Country</h3>
+              <h5 class="mt-4">We acknowledge Aboriginal and Torres Strait Islander peoples as the traditional custodians of our land – Australia. The Gadigal of the Eora Nation are the traditional custodians of this place we now call Sydney.</h5>
             </div>
           </div>
         </div>
